# transport-tracker

./: .gitignore  Pipfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt  test.json
api/: Dockerfile.dev  Dockerfile.prod  README.md  mypy.ini  pyproject.toml
api/data/: jon.json
api/src/api/: dirs.py  log.py  main.py  network.py  record.py  test.py  times.py  user.py
api/src/api/api/: lifespan.py  main.py  network.py  pagination.py
api/src/api/api/routers/bus/: bus.py  legs.py  vehicles.py
api/src/api/api/routers/train/: legs.py  map.py  operators.py  stations.py  stats.py  train.py
api/src/api/api/routers/users/: user.py
api/src/api/api/routers/users/bus/: bus.py  legs.py  stops.py  vehicles.py
api/src/api/api/routers/users/train/: brands.py  legs.py  map.py  maps.py  operators.py  stations.py  stats.py  train.py  vehicles.py
api/src/api/api/routers/utils/: train.py  utils.py
api/src/api/classes/: interactive.py  user.py
api/src/api/classes/bus/: journey.py  leg.py  operators.py  overview.py  service.py  stop.py  vehicle.py
api/src/api/classes/bus/db/: input.py  output.py
api/src/api/classes/network/: geometry.py  map.py
api/src/api/classes/train/: association.py  leg.py  legs.py  network.py  operators.py  service.py  station.py  stats.py  stock.py
api/src/api/classes/train/db/: input.py  output.py
api/src/api/classes/users/: users.py
api/src/api/classes/users/train/: legs.py
api/src/api/data/: core.py  credentials.py  database.py  environment.py  generate_network.py  leg.py  map.py  mileage.py  network.py  plot.py  points.py  schema.py  services.py  setup.py  stationpics.py  stations.py  stats.py  stock.py  toc.py  toperator.py  train.py
api/src/api/data/bus/: journey.py  leg.py  operators.py  overview.py  populate.py  record.py  service.py  stop.py  trip.py  vehicle.py
api/src/api/data/bus/pages/journey/: classes.py  reader.py
api/src/api/data/bus/populate/: all.py  operators.py  service.py  stop.py  vehicle.py
api/src/api/data/bus/user/: stop.py
api/src/api/data/selenium/: driver.py
api/src/api/data/train/: association.py  leg.py  points.py  services.py  stations.py
api/src/api/data/train/populate/: sources.py
api/src/api/data/train/retrieve/: html.py  insert.py  json.py
api/src/api/db/: types.py  user.py
api/src/api/db/bus/: journey.py  leg.py  operators.py  overview.py  service.py  stop.py  vehicle.py
api/src/api/db/bus/populate/: all.py  operators.py  service.py  stop.py  vehicle.py
api/src/api/db/bus/user/: stop.py
api/src/api/db/train/: in.py  leg.py  legs.py  operators.py  points.py  stations.py  stats.py  stock.py  toc.py
api/src/api/db/train/classes/: input.py  output.py
api/src/api/db/train/populate/: sources.py  stationpics.py
api/src/api/db/train/select/: service.py
api/src/api/db/users/: users.py
api/src/api/db/users/train/: legs.py
api/src/api/migration/: fromjson.py  fromnewsheet.py  fromoldsheet.py
api/src/api/network/: decode.py  display.py  encode.py  expand.py  generate.py  insert.py  library.py  map.py  network.py  pathfinding.py  setup.py
api/src/api/pull/bus/: journey.py  stop.py  vehicle.py
api/src/api/pull/train/: json.py  service.py  station.py  types.py
api/src/api/record/: bus.py  main.py  record.py  train.py  user.py
api/src/api/stats/: train.py
api/src/api/stats/classes/: train.py  user.py
api/src/api/transform/train/: legs.py
api/src/api/utils/: credentials.py  database.py  debug.py  environment.py  interactive.py  maybe.py  request.py  soup.py  times.py
assets/: scripts.js  styles.scss
client/: .gitignore  Dockerfile.dev  Dockerfile.prod  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
data/: lnwr.yml  stations.yml  stock.yml
db/: 95-rename-train-tables.sql  Dockerfile  drops.py  gen-data.sh  init.sql  run-in-scripts.sh
db/code/: 1_types_1_train.sql  3_insert_train.sql  (+1 more)
db/watcher/: Dockerfile  entrypoint.sh  pyproject.toml
db/watcher/scripts/: domains.sql
db/watcher/src/watcher/: classes.py  files.py  funcgen.py  generator.py  main.py  processor.py  pynames.py  pytypes.py  runner.py  typegen.py  utils.py
examples/: 2022.json  2023.json  2024.json  index.html  log.json  log.yml  styles.css
src/: api.py  debug.py  dirs.py  get_data.py  html.py  input.py  legacy.py  log.py  main.py  network.py  record.py  scraper.py  structures.py  time.py  times.py  trains.py
stats/: README.md  pyproject.toml
stats/src/stats/: classes.py  client.py  main.py
templates/: elements.html  index.html  journey.html  leg.html  stop.html  styles.scss
(+231 files in other folders)
