[tool.poetry]
name = "train-tracker"
version = "0.1.0"
description = ""
authors = ["George Kaye <georgejkaye@gmail.com>"]
readme = "README.md"
packages = [{ include = "api", from = "src" }]

[tool.poetry.dependencies]
python = "^3.13"
termcolor = "^2.3.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.32.4"
python-dotenv = "^1.0.1"
questionary = "^2.0.1"
uvicorn = "^0.30.5"
pytz = "^2024.1"
fastapi = "^0.128.0"
psycopg = "^3.3.2"
folium = "^0.19.3"
osmnx = "^2.0.6"

[tool.poetry.group.dev.dependencies]
mypy = "^1.6.0"
types-requests = "^2.31.0.2"
types-pytz = "^2025.2.0.20250516"
types-shapely = "^2.1.0.20250512"
types-geopandas = "^1.0.1.20250601"
types-networkx = "^3.5.0.20250918"
ruff = "^0.14.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 80

[tool.mypy]
strict = true
