[project]
name = "stats"
version = "0.1.0"
description = ""
authors = [{ name = "George Kaye", email = "georgejkaye@gmail.com" }]
license = { text = "GPL-v3.0-or-later" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.4.0,<3.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "jinja2 (>=3.1.6,<4.0.0)",
    "pyqt6 (>=6.10.1,<7.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.19.1"
ruff = "^0.14.10"
types-requests = "^2.32.4.20250913"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
