[project]
name = "watcher"
version = "0.1.0"
description = "Watcher for updating db code"
authors = [
    {name = "George Kaye",email = "georgejkaye@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "watchdog (>=6.0.0,<7.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
